# rusty-dancepad

./: Cargo.toml  Justfile  LICENSE  README.md  rust-toolchain.toml
abi/: Cargo.toml
abi/src/: codec.rs  lib.rs  message.rs  serde.rs  types.rs
dancepad-cli/: Cargo.toml
dancepad-cli/src/: main.rs  serial.rs
dancepad-gui/: Cargo.toml
dancepad-gui/src/: main.rs  serial.rs
emulator/: Cargo.toml
emulator/src/: main.rs
stm32f411-fsr/: Cargo.toml  Embed.toml  build.rs
stm32f411-fsr/.cargo/: config.toml
stm32f411-fsr/examples/: adc.rs  adc2.rs  adc4.rs  blinky.rs  usb.rs  usb_joy.rs  usb_serial.rs
stm32f411-fsr/src/: main.rs  push_buffer.rs
