[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
corncobs = { version = "0.1.3", default-features = false }
itoa = "1.0.14"
serde = { version = "1.0.215", features = ["derive"], default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
thiserror = { version = "2.0.6", default-features = false }

[features]
host = ["ssmarshal/std"]
device = []
crc = []
