[package]
name = "stm32f411-fsr"
version = "0.1.0"
authors = ["Henri Lunnikivi <heggggxa@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
cortex-m-rtic = "1.1"
defmt-rtt = "0.4.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411", "rtic1", "defmt", "usb_fs"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
