[package]
name = "stm32f411-fsr"
version = "0.1.0"
authors = ["Henri Lunnikivi <heggggxa@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "0.3.1", features = ["defmt"] }
cortex-m-rtic = "1.1"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
rtt-target = "0.5.0"
stm32-usbd = "0.7.0"
usbd-human-interface-device = { version = "0.5.0", features = [] }
frunk = { version = "0.4.3", default-features = false }

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411", "rtic1", "usb_fs"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
